--- a/index.html
+++ b/index.html
@@ -1,10 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>민수의 홈페이지</title>
+    <title>강원천문대</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="script/jquery-1.12.3.js"></script>
+    <script src="script/"></script>
 </head>
 <body>
-    <a href="movie.html">1. 동영상 넣기 - you should see me in a crown</a>
+    <div id="head">
+        <div class="logo">
+            <img src="images/logo.jpg" alt="">
+        </div>
+        <ul class="nav">
+            <li>
+                <a href="#">강원천문대</a>
+                <ul class="sub">
+                    <li><a href="#">천문대소개</a></li>
+                    <li><a href="#">인사말</a></li>
+                    <li><a href="#">오시는길</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">이용안내</a>
+                <ul class="sub">
+                    <li><a href="#">프로그램</a></li>
+                    <li><a href="#">관람시간표</a></li>
+                    <li><a href="#">이달의 별자리</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">천문대예약</a>
+                <ul class="sub">
+                    <li><a href="#">예약하기</a></li>
+                    <li><a href="#">예약확인</a></li>
+                    <li><a href="#">예약취소</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="#">커뮤니티</a>
+                <ul class="sub">
+                    <li><a href="#">공지사항</a></li>
+                    <li><a href="#">방문후기</a></li>
+                    <li><a href="#">자유게시판</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+    <div id="main">
+        <div class="slide">
+            <img src="images/Slide_1.jpg" alt="슬라이드1">
+            <img src="images/Slide_2.jpg" alt="슬라이드2">
+            <img src="images/Slide_3.jpg" alt="슬라이드3">
+        </div>
+    </div>
+    <div id="contents">
+    </div>
+    <div id="foot"></div>
+    
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
